<resources>
	<string name="app_name">Driving_Style</string>
	<string name="facebook_app_id">189268738095311</string>

	<!-- AuthActivity resources -->
	<string name="login">Login:</string>
	<string name="loginHint">Enter your E-mail</string>
	<string name="password">Password:</string>
	<string name="passwordHint">Enter your password</string>
	<string name="rememberMe">Remember me</string>
	<string name="signIn">Sign In</string>
	<string name="signUp">Sign Up</string>
	<string name="toggleButtonTextOn">YES</string>
	<string name="toggleButtonTextOff">NO</string>
	<string name="registrationTitle">Sign Up Form</string>
	<string name="repeatPassword">Repeat the password:</string>
	<string name="error_invalid_password">Error invalid password</string>
	<string name="error_field_required">Error filed required</string>
	<string name="error_invalid_email">Error invalid email</string>
	<string name="error_invalid_same_email">Error email is already in use</string>
	<string name="prompt_email">E-mail:</string>
	<string name="prompt_password">Password:</string>
	<string name="action_sign_in_short">action_sign_in_short:</string>

	<string-array name="email_autocomplete_full">
		<item>gmail.com</item>
		<item>onet.pl</item>
		<item>rambler.ru</item>
	</string-array>

	<!-- TestActivity resources -->
	<string name="accelerometer_title">Acceleration (m/s^2)</string>
	<string name="start_recording_button">Start</string>
	<string name="stop_recording_button">Stop</string>
	<string name="tvAlpha">\u03B1 = </string>
	<string name="start_acc_btn">Launch</string>
	<string name="accelerometer_sensor">Accelerometer sensor</string>
	<string name="acc_values">x = \ny = \nz = </string>
	<string name="db_recording">DATABASE RECORDING</string>
	<string name="export_db">Export results</string>
	<string name="gps_title">GPS</string>
	<string name="gps_sensor">GPS sensor</string>
	<string name="gps_status">unavailable</string>
	<string name="gps_values">Latitude\nLongitude \nElevation</string>
	<string name="export_title">Export</string>
	<string name="etFileName_hint">File name</string>
	<string name="export_items_title">Items:</string>
	<string name="cb_users_title">Users table (*_users.csv)</string>
	<string name="cb_trips_title">Trips table (*_trips.csv)</string>
	<string name="cb_acc_data_title">Accelerometer data table (*_acc.csv)</string>
	<string name="cb_gps_data_title">GPS data table (*_gps.csv)</string>
	<string name="btn_back_title"><![CDATA[< Back]]></string>

	<!-- ExportFragment resources -->
	<string name="cb_error">Check at least one option</string>
	<string name="result_msg">Exported successfully</string>
	<string name="filename_error">Invalid filename</string>

	<!-- LocationSensor resources -->
	<string name="unavailable">unavailable</string>
	<string name="temporarily_unavailable">temporarily unavailable</string>
	<string name="available">available</string>
	<string name="wrong_password">Wrong password</string>
	<string name="wrong_email">There is no such user registered</string>
	<string name="enable_gps">Enable GPS service, please</string>
	<string name="enable_gps_dialog">Your GPS seems to be disabled, do you want to enable it?</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="choose_mode">Menu</string>
	<string name="practice">Practice</string>
	<string name="exam">Exam</string>
	<string name="scenario">Scenario</string>
	<string name="user_profile">Profile</string>
	<string name="settings">Settings</string>
	<string name="average_mark">Average mark</string>
	<string name="empty_history">We need learn your driving style. Swipe to the left and take a ride!</string>
	<string name="hello">Hello,</string>
	<string name="share">Share</string>
	<string name="pick_scenario">Choose scenario</string>
	<string name="scenario_braking">Sharp braking</string>
	<string name="scenario_turn">Sharp turn</string>
	<string name="scenario_lane_change">Sharp lane change</string>
	<string name="proceed">Proceed</string>
	<string name="unknown">Unknown</string>
	<string name="mark">Mark</string>
	<string name="type">Type</string>
	<string name="coef">Low pass coefficient</string>
	<string name="account">Account</string>
	<string name="logout">Logout</string>
	<string name="crashes_sent">Crash report sent successfully!</string>
	<string name="crashes_not_sent">Crash report sending failed!</string>
	<string name="alert_dialog_title">Are you sure?</string>
	<string name="alert_dialog_message">You are going to delete all  trips</string>
	<string name="ok">OK</string>

	<!-- StartActivity resources -->
	<string-array name="step_number">
		<item>\u2776 \u2781 \u2782 \u2783 \u2784 \u2785 \u2786</item>
		<item>\u2780 \u2777 \u2782 \u2783 \u2784 \u2785 \u2786</item>
		<item>\u2780 \u2781 \u2778 \u2783 \u2784 \u2785 \u2786</item>
		<item>\u2780 \u2781 \u2782 \u2779 \u2784 \u2785 \u2786</item>
		<item>\u2780 \u2781 \u2782 \u2783 \u277A \u2785 \u2786</item>
		<item>\u2780 \u2781 \u2782 \u2783 \u2784 \u277B \u2786</item>
		<item>\u2780 \u2781 \u2782 \u2783 \u2784 \u2785 \u277C</item>
	</string-array>

	<string-array name="dot_bar">
		<item>\u2022 \u25E6 \u25E6</item>
		<item>\u25E6 \u2022 \u25E6</item>
		<item>\u25E6 \u25E6 \u2022</item>
	</string-array>

</resources>
