<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:orientation="vertical">

	<TextView
		android:text="@string/choose_mode"
		style="@style/BigTitleStyle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"/>

	<Button
		android:id="@+id/btnStartPractice"
		style="@style/BigButtonStyle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/practice"/>

	<Button
		android:id="@+id/btnStartExam"
		style="@style/BigButtonStyle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/exam"/>

	<Button
		android:id="@+id/btnStartScenario"
		style="@style/BigButtonStyle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/scenario"/>

</LinearLayout>