<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context="com.diploma.vmpay.driving_style.test.TestActivity">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="@dimen/activity_horizontal_margin"
			android:layout_marginRight="@dimen/activity_horizontal_margin"
			android:orientation="vertical">

			<TextView
				style="@style/LargeTextStyle"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/accelerometer_title"/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:orientation="horizontal">

				<TextView
					style="@style/MediumInactiveTextStyle"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/tvAlpha"/>

				<SeekBar
					android:id="@+id/sbAlpha"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="@dimen/activity_vertical_margin"
					android:layout_weight="1"
					android:max="100"
					android:progress="80"/>

			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:orientation="horizontal">

				<TextView
					style="@style/MediumInactiveTextStyle"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/accelerometer_sensor"/>

				<ToggleButton
					android:id="@+id/tbAccelerometer"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center"/>

			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<TextView
					style="@style/MediumTextStyle"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/acc_values"/>

				<TextView
					android:id="@+id/tvAccValues"
					style="@style/MediumTextStyle"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="0.0\n0.0\n0.0"/>

			</LinearLayout>

			<View
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:layout_margin="@dimen/view_margin"
				android:background="@color/textInactive"/>

			<TextView
				style="@style/LargeTextStyle"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/gps_title"/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:orientation="horizontal">

				<TextView
					style="@style/MediumInactiveTextStyle"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/gps_sensor"/>

				<ToggleButton
					android:id="@+id/tbGPS"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center"/>

			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<TextView
					style="@style/MediumTextStyle"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/gps_values"/>

				<TextView
					android:id="@+id/tvGpsValues"
					style="@style/MediumTextStyle"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="0.0\n0.0\n0.0"/>

			</LinearLayout>

			<View
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:layout_margin="@dimen/view_margin"
				android:background="@color/textInactive"/>

		</LinearLayout>

	</ScrollView>

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:layout_marginBottom="@dimen/view_margin"
		android:background="@color/textInactive"/>

	<TextView
		style="@style/MediumTextStyle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="@string/db_recording"
		android:textColor="@color/colorAccent"/>

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@color/textInactive"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<Button
			android:id="@+id/btnStartRecording"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/start_recording_button"/>

		<View
			android:layout_width="1dp"
			android:layout_height="match_parent"
			android:background="@color/textInactive"/>

		<Button
			android:id="@+id/btnStopRecording"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/stop_recording_button"/>

	</LinearLayout>

</LinearLayout>
