<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:orientation="vertical"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent">

	<TextView
		style="@style/LargeTextStyle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/gps_title"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:orientation="horizontal">

		<TextView
			style="@style/MediumInactiveTextStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/gps_sensor"/>

		<TextView
			android:id="@+id/tvGpsStatus"
			style="@style/MediumInactiveTextStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/gps_status"/>

		<ToggleButton
			android:id="@+id/tbGPS"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"/>

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
			style="@style/MediumTextStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/gps_values"/>

		<TextView
			android:id="@+id/tvGpsValues"
			style="@style/MediumTextStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="0.0\n0.0\n0.0"/>

	</LinearLayout>

</LinearLayout>