<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:orientation="vertical"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent">

	<TextView
		style="@style/LargeTextStyle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/accelerometer_title"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:orientation="horizontal">

		<TextView
		style="@style/MediumInactiveTextStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/tvAlpha"/>

		<TextView
			style="@style/MediumInactiveTextStyle"
			android:id="@+id/tvAlpha"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>

		<SeekBar
			android:id="@+id/sbAlpha"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/activity_vertical_margin"
			android:layout_weight="1"
			android:max="100"
			android:progress="80"/>

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:orientation="horizontal">

		<TextView
			style="@style/MediumInactiveTextStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/accelerometer_sensor"/>

		<ToggleButton
			android:id="@+id/tbAccelerometer"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"/>

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<TextView
			style="@style/MediumTextStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/acc_values"/>

		<TextView
			android:id="@+id/tvAccValues"
			style="@style/MediumTextStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="0.0\n0.0\n0.0"/>

	</LinearLayout>

</LinearLayout>